apps/ai-whatif/deployment-backend-py.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aiwhatif-backend-py
  namespace: ai-whatif
  labels:
    app: aiwhatif-backend-py
    type: backend
spec:
  revisionHistoryLimit: 2
  
  selector:
    matchLabels:
      app: aiwhatif-backend-py
  template:
    metadata:
      labels:
        app: aiwhatif-backend-py
        type: backend
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: aiwhatif-backend-py
          image: ghcr.io/curatimexai/nightingale-aiwhatif-backend-python:7e0ae212e67f3fbe2765c78bd75e19dafe6930c6
          ports:
            - containerPort: 8000

          livenessProbe:
            httpGet:  
              path: /healthy
              port: 8000
            initialDelaySeconds: 60
            periodSeconds: 30
          startupProbe:
            httpGet:
              path: /healthy
              port: 8000
            failureThreshold: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /healthy
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 30
          resources:
            requests:
              cpu: 250m
              memory: 2Gi
            limits:
              cpu: 500m
              memory: 4Gi
