apps/ai-whatif/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aiwhatif-backend
  namespace: ai-whatif
  labels:
    app: aiwhatif-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: aiwhatif-backend
  template:
    metadata:
      labels:
        app: aiwhatif-backend
    spec:
      containers:
        - name: aiwhatif-backend
          image: ghcr.io/curatimexai/nightingale-aiwhatif-backend:d0bd330d1a5634ff5b36a05d8b5f5358f6cefbb5
          ports:
            - containerPort: 9000
