apps/ai-whatif/service-backend-py.yaml
apiVersion: v1
kind: Service
metadata: 
  name: aiwhatif-backend-py-service
  namespace: ai-whatif
spec:
  selector:
    app: aiwhatif-backend-py
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
