apps/ai-whatif/service-backend-r.yaml
apiVersion: v1
kind: Service
metadata: 
  name: aiwhatif-backend-r-service
  namespace: ai-whatif
spec:
  selector:
    app: aiwhatif-backend-r
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
