apps/ai-whatif/backendPy-httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backendpy-httproute
  namespace: ai-whatif
spec:
  parentRefs:
  - name: api-gateway
    sectionName: https
    namespace: gateway
  hostnames:
  -  api-python.aiwhatif.nightingaleheart.com
  rules:
  - matches:
    - path: 
       type: PathPrefix
       value: /
    backendRefs:
    - name: aiwhatif-backend-py-service
      port: 8000
