apps/ai-whatif/backendR-httpRoute.yaml
apiVersion: gateway.networking.k8s.io/V1
kind: HTTPRoute
metadata:
  name: backendR-aiWhatif-httpRoute
  namespace: ai-whatif
spec:
 parentRefs:
 - name: api-gateway
   sectionName: https
 hostnames:
 - api.aiwhatif.nightingaleheart.com
 rules:
 - matches:
   - path:
     type: PathPrefix
     value: /
   backendRefs:
   - name: foo-app
     port: 9000
