apps/ai-whatif/frontend-httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-aiwhatif-httproute
  namespace: ai-whatif
spec:
 parentRefs:
 - name:  api-gateway
   sectioName: https
   namespace: gateway
 hostnames:
 - aiwhatif.nightingaleheart.com
 rules:
 - matches:
   - path:
      type: PathPrefix
      value: /  
   backendRefs:
   - name: aiwhatif-frontend-service
     port: 80
