apps/ai-whatif/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aiwhatif-ingress
  namespace: ai-whatif
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - healthyheart.nightingaleheart.com
        - api.aiwhatif.nightingaleheart.com
        - api-python.aiwhatif.nightingaleheart.com
        - aiwhatif.nightingaleheart.com
      secretName: aiwhatif-tls
  rules:

    - host: aiwhatif.nightingaleheart.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aiwhatif-frontend-service
                port:
                  number: 80
    - host: healthyheart.nightingaleheart.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aiwhatif-frontend-service
                port:
                  number: 80
    - host: api.aiwhatif.nightingaleheart.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aiwhatif-backend-r-service
                port:
                  number: 9000
    - host: api-python.aiwhatif.nightingaleheart.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aiwhatif-backend-py-service
                port:
                  number: 8000
