apps/ai-whatif/backend-py-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backendPY-network-policy
  namespace: ai-whatif
spec:
  podSelector:
    matchLabels:
      app: aiwhatif-backend-py
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
       matchLabels:
        kubernetes.io/metadata.name: ingress-nginx
    ports:
    - protocol: TCP
      port: 8000
