apps/ai-whatif/network-policy-backend.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: "aiwhatif-backend-network-policy"
  namespace: ai-whatif
spec:
  endpointSelector:
    matchLabels:
      type: backend
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchName: "8ps1i.upcloudobjects.com"
              - matchName: "8ps1i-private.upcloudobjects.com"
    - toFQDNs:
        - matchName: "8ps1i.upcloudobjects.com"
        - matchName: "8ps1i-private.upcloudobjects.com"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
