apps/ai-whatif/network-policy-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: 
  name: aiwhatif-frontend-network-policy
  namespace: ai-whatif
spec:
 podSelector:
   matchLabels: 
     app: aiwhatif-frontend
 policyTypes:
 - Ingress
 - Egress
 ingress:
 - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx
   ports:
   - protocol: TCP
     port: 80
