apps/ai-whatif/networkpolicy-backend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: aiwhatif-backend-network-policy
  namespace: ai-whatif
spec:
  podSelector:
    matchLabels:
      type: backend 
  policyTypes:
    - Ingress
  ingress:
    - from: 
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: nginx-ingress
       
      ports: 
        - protocol: TCP
          port: 8000
        - protocol: TCP
          port: 9000
  egress:
    - to:
      - ipBlock:
          cidr: 10.0.0.0/24
      ports:
        - protocol: TCP
          port : 443
