apps/ai-whatif/networkpolicy-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: aiwhatif-frontend-network-policy
  namespace: ai-whatif
spec:
  podSelector:
    matchLabels:
      type: frontend
    policyTypes:
      - Ingress
      - Egress
    ingress:
      - from:
         - namespaceSelector:
              matchLabels:
                kubernetes.io/metadata.name: nginx-ingress
        ports:
          - protocol: TCP
            port: 80
